ext/trenni/lexer.c

#line 1 "lexer.rl"

#include <lexer.h>

#include <ruby/encoding.h>

typedef struct {
	const char * begin;
	const char * end;
} Token;

static VALUE Trenni_token(Token token) {
	return rb_str_new(token.begin, token.end - token.begin);
}

static void Trenni_Parser_append_token(VALUE * buffer, rb_encoding * encoding, Token token) {
	if (*buffer == Qnil) {
		// Allocate a buffer exactly the right size:
		*buffer = rb_enc_str_new(token.begin, token.end - token.begin, encoding);
	} else {
		// Append the characters to the existing buffer:
		rb_str_buf_cat(*buffer, token.begin, token.end - token.begin);
	}
}

static void Trenni_Parser_append_codepoint(VALUE * buffer, rb_encoding * encoding, unsigned long codepoint) {
	printf("Trenni_Parser_append_codepoint %ul %ul\n", buffer, codepoint);
	
	if (*buffer == Qnil) {
		*buffer = rb_enc_str_new("", 0, encoding);
	}
	
	rb_str_concat(*buffer, ULONG2NUM(codepoint));
}

#define entity_codepoint(number) Trenni_Parser_append_codepoint(&pcdata, encoding, number)


#line 41 "lexer.c"
static const int trenni_lexer_start = 56;
static const int trenni_lexer_first_final = 56;
static const int trenni_lexer_error = 0;

static const int trenni_lexer_en_parse_entity = 40;
static const int trenni_lexer_en_main = 56;


#line 214 "lexer.rl"


static void Trenni_Parser_parse_error(const char * message, VALUE buffer, size_t offset) {
	VALUE exception = rb_funcall(rb_Trenni_ParseError, rb_intern("new"), 3, rb_str_new_cstr(message), buffer, UINT2NUM(offset));
	
	rb_exc_raise(exception);
}

void Trenni_Parser_parse_buffer(VALUE buffer, VALUE delegate) {
	VALUE string = rb_funcall(buffer, id_read, 0);
	
	rb_encoding *encoding = rb_enc_get(string);
	
	VALUE pcdata = Qnil;
	
	VALUE empty_string = rb_enc_str_new("", 0, encoding);
	rb_obj_freeze_inline(empty_string);
	
	const char * s = RSTRING_PTR(string);
	const char * p = s;
	const char * pe = p + RSTRING_LEN(string);
	const char * eof = pe;

	unsigned long cs;
	unsigned long top = 0;
	unsigned long stack[2] = {0};
	
	Token identifier, cdata, characters, entity, doctype, comment, instruction_text;
	unsigned self_closing = 0, has_value = 0;
	
	
#line 82 "lexer.c"
	{
	cs = trenni_lexer_start;
	top = 0;
	}

#line 88 "lexer.c"
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch ( cs ) {
		case 56: goto st56;
		case 57: goto st57;
		case 58: goto st58;
		case 1: goto st1;
		case 2: goto st2;
		case 0: goto st0;
		case 3: goto st3;
		case 4: goto st4;
		case 5: goto st5;
		case 59: goto st59;
		case 6: goto st6;
		case 7: goto st7;
		case 8: goto st8;
		case 9: goto st9;
		case 10: goto st10;
		case 11: goto st11;
		case 12: goto st12;
		case 13: goto st13;
		case 14: goto st14;
		case 15: goto st15;
		case 16: goto st16;
		case 60: goto st60;
		case 17: goto st17;
		case 18: goto st18;
		case 19: goto st19;
		case 20: goto st20;
		case 21: goto st21;
		case 22: goto st22;
		case 23: goto st23;
		case 61: goto st61;
		case 24: goto st24;
		case 25: goto st25;
		case 26: goto st26;
		case 27: goto st27;
		case 28: goto st28;
		case 29: goto st29;
		case 30: goto st30;
		case 31: goto st31;
		case 32: goto st32;
		case 62: goto st62;
		case 33: goto st33;
		case 34: goto st34;
		case 63: goto st63;
		case 35: goto st35;
		case 36: goto st36;
		case 37: goto st37;
		case 38: goto st38;
		case 39: goto st39;
		case 64: goto st64;
		case 40: goto st40;
		case 41: goto st41;
		case 42: goto st42;
		case 65: goto st65;
		case 43: goto st43;
		case 44: goto st44;
		case 45: goto st45;
		case 46: goto st46;
		case 47: goto st47;
		case 48: goto st48;
		case 49: goto st49;
		case 50: goto st50;
		case 51: goto st51;
		case 52: goto st52;
		case 53: goto st53;
		case 54: goto st54;
		case 55: goto st55;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch ( cs )
	{
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
	switch( (*p) ) {
		case 38: goto tr96;
		case 60: goto tr97;
	}
	goto tr95;
tr98:
#line 56 "lexer.rl"
	{
		characters.end = p;
		
		Trenni_Parser_append_token(&pcdata, encoding, characters);
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
tr101:
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
tr95:
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
tr104:
#line 173 "lexer.rl"
	{
		rb_funcall(delegate, id_open_tag_end, 1, self_closing == 1 ? Qtrue : Qfalse);
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
tr107:
#line 110 "lexer.rl"
	{
		comment.end = p;
		
		rb_funcall(delegate, id_comment, 1, Trenni_token(comment));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
tr110:
#line 96 "lexer.rl"
	{
		doctype.end = p;
		
		rb_funcall(delegate, id_doctype, 1, Trenni_token(doctype));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
tr113:
#line 192 "lexer.rl"
	{
		cdata.end = p;
		
		rb_funcall(delegate, id_cdata, 1, Trenni_token(cdata));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
tr116:
#line 180 "lexer.rl"
	{
		rb_funcall(delegate, id_close_tag, 1, Trenni_token(identifier));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
tr119:
#line 127 "lexer.rl"
	{
		instruction_text.end = p-2;
		
		rb_funcall(delegate, id_instruction, 2, Trenni_token(identifier), Trenni_token(instruction_text));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st57;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
#line 331 "lexer.c"
	switch( (*p) ) {
		case 38: goto tr99;
		case 60: goto tr100;
	}
	goto tr98;
tr99:
#line 56 "lexer.rl"
	{
		characters.end = p;
		
		Trenni_Parser_append_token(&pcdata, encoding, characters);
	}
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
tr102:
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
tr96:
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
tr105:
#line 173 "lexer.rl"
	{
		rb_funcall(delegate, id_open_tag_end, 1, self_closing == 1 ? Qtrue : Qfalse);
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
tr108:
#line 110 "lexer.rl"
	{
		comment.end = p;
		
		rb_funcall(delegate, id_comment, 1, Trenni_token(comment));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
tr111:
#line 96 "lexer.rl"
	{
		doctype.end = p;
		
		rb_funcall(delegate, id_doctype, 1, Trenni_token(doctype));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
tr114:
#line 192 "lexer.rl"
	{
		cdata.end = p;
		
		rb_funcall(delegate, id_cdata, 1, Trenni_token(cdata));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
tr117:
#line 180 "lexer.rl"
	{
		rb_funcall(delegate, id_close_tag, 1, Trenni_token(identifier));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
tr120:
#line 127 "lexer.rl"
	{
		instruction_text.end = p-2;
		
		rb_funcall(delegate, id_instruction, 2, Trenni_token(identifier), Trenni_token(instruction_text));
	}
#line 202 "lexer.rl"
	{
	
	}
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 13 "entities.rl"
	{{stack[top++] = 58; goto st40;}}
	goto st58;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
#line 471 "lexer.c"
	switch( (*p) ) {
		case 38: goto tr102;
		case 60: goto tr103;
	}
	goto tr101;
tr97:
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr100:
#line 56 "lexer.rl"
	{
		characters.end = p;
		
		Trenni_Parser_append_token(&pcdata, encoding, characters);
	}
#line 48 "lexer.rl"
	{
		// Buffer is ready.
	}
#line 206 "lexer.rl"
	{
		// Entities are handled separately:
		rb_funcall(delegate, id_text, 1, pcdata);
	}
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr103:
#line 48 "lexer.rl"
	{
		// Buffer is ready.
	}
#line 206 "lexer.rl"
	{
		// Entities are handled separately:
		rb_funcall(delegate, id_text, 1, pcdata);
	}
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr106:
#line 173 "lexer.rl"
	{
		rb_funcall(delegate, id_open_tag_end, 1, self_closing == 1 ? Qtrue : Qfalse);
	}
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr109:
#line 110 "lexer.rl"
	{
		comment.end = p;
		
		rb_funcall(delegate, id_comment, 1, Trenni_token(comment));
	}
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr112:
#line 96 "lexer.rl"
	{
		doctype.end = p;
		
		rb_funcall(delegate, id_doctype, 1, Trenni_token(doctype));
	}
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr115:
#line 192 "lexer.rl"
	{
		cdata.end = p;
		
		rb_funcall(delegate, id_cdata, 1, Trenni_token(cdata));
	}
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr118:
#line 180 "lexer.rl"
	{
		rb_funcall(delegate, id_close_tag, 1, Trenni_token(identifier));
	}
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
tr121:
#line 127 "lexer.rl"
	{
		instruction_text.end = p-2;
		
		rb_funcall(delegate, id_instruction, 2, Trenni_token(identifier), Trenni_token(instruction_text));
	}
#line 144 "lexer.rl"
	{
	}
#line 177 "lexer.rl"
	{
	}
#line 120 "lexer.rl"
	{
	}
#line 106 "lexer.rl"
	{
		comment.begin = p;
	}
#line 92 "lexer.rl"
	{
		doctype.begin = p;
	}
#line 188 "lexer.rl"
	{
		cdata.begin = p;
	}
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 744 "lexer.c"
	switch( (*p) ) {
		case 33: goto st12;
		case 47: goto st33;
		case 63: goto st35;
		case 96: goto tr1;
	}
	if ( (*p) < 59 ) {
		if ( 0 <= (*p) && (*p) <= 44 )
			goto tr1;
	} else if ( (*p) > 64 ) {
		if ( (*p) > 94 ) {
			if ( 123 <= (*p) )
				goto tr1;
		} else if ( (*p) >= 91 )
			goto tr1;
	} else
		goto tr1;
	goto tr0;
tr0:
#line 41 "lexer.rl"
	{ identifier.begin = p; }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 771 "lexer.c"
	switch( (*p) ) {
		case 32: goto tr6;
		case 47: goto tr7;
		case 62: goto tr8;
		case 96: goto tr1;
	}
	if ( (*p) < 14 ) {
		if ( (*p) > 8 ) {
			if ( 9 <= (*p) && (*p) <= 13 )
				goto tr6;
		} else if ( (*p) >= 0 )
			goto tr1;
	} else if ( (*p) > 44 ) {
		if ( (*p) < 91 ) {
			if ( 59 <= (*p) && (*p) <= 64 )
				goto tr1;
		} else if ( (*p) > 94 ) {
			if ( 123 <= (*p) )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto st2;
tr1:
#line 184 "lexer.rl"
	{
		Trenni_Parser_parse_error("could not parse tag", buffer, p-s);
	}
	goto st0;
tr62:
#line 133 "lexer.rl"
	{
		Trenni_Parser_parse_error("could not parse instruction", buffer, p-s);
	}
	goto st0;
tr71:
#line 62 "lexer.rl"
	{
		Trenni_Parser_parse_error("could not parse entity", buffer, p-s);
	}
	goto st0;
#line 814 "lexer.c"
st0:
cs = 0;
	goto _out;
tr6:
#line 42 "lexer.rl"
	{ identifier.end = p; }
#line 137 "lexer.rl"
	{
		// Reset self-closing state - we don't know yet.
		self_closing = 0;
		
		rb_funcall(delegate, id_open_tag_begin, 1, Trenni_token(identifier));
	}
	goto st3;
tr14:
#line 42 "lexer.rl"
	{ identifier.end = p; }
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
	goto st3;
tr25:
#line 155 "lexer.rl"
	{
		has_value = 1;
	}
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
	goto st3;
tr31:
#line 159 "lexer.rl"
	{
		has_value = 2;
	}
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 879 "lexer.c"
	switch( (*p) ) {
		case 32: goto st3;
		case 47: goto tr11;
		case 62: goto st59;
		case 96: goto tr1;
	}
	if ( (*p) < 14 ) {
		if ( (*p) > 8 ) {
			if ( 9 <= (*p) && (*p) <= 13 )
				goto st3;
		} else if ( (*p) >= 0 )
			goto tr1;
	} else if ( (*p) > 44 ) {
		if ( (*p) < 91 ) {
			if ( 59 <= (*p) && (*p) <= 64 )
				goto tr1;
		} else if ( (*p) > 94 ) {
			if ( 123 <= (*p) )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto tr9;
tr9:
#line 151 "lexer.rl"
	{
		has_value = 0;
	}
#line 41 "lexer.rl"
	{ identifier.begin = p; }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 916 "lexer.c"
	switch( (*p) ) {
		case 32: goto tr14;
		case 47: goto tr15;
		case 61: goto tr16;
		case 62: goto tr17;
		case 96: goto tr1;
	}
	if ( (*p) < 14 ) {
		if ( (*p) > 8 ) {
			if ( 9 <= (*p) && (*p) <= 13 )
				goto tr14;
		} else if ( (*p) >= 0 )
			goto tr1;
	} else if ( (*p) > 44 ) {
		if ( (*p) < 91 ) {
			if ( 59 <= (*p) && (*p) <= 64 )
				goto tr1;
		} else if ( (*p) > 94 ) {
			if ( 123 <= (*p) )
				goto tr1;
		} else
			goto tr1;
	} else
		goto tr1;
	goto st4;
tr7:
#line 42 "lexer.rl"
	{ identifier.end = p; }
#line 137 "lexer.rl"
	{
		// Reset self-closing state - we don't know yet.
		self_closing = 0;
		
		rb_funcall(delegate, id_open_tag_begin, 1, Trenni_token(identifier));
	}
#line 147 "lexer.rl"
	{
		self_closing = 1;
	}
	goto st5;
tr11:
#line 147 "lexer.rl"
	{
		self_closing = 1;
	}
	goto st5;
tr15:
#line 42 "lexer.rl"
	{ identifier.end = p; }
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
#line 147 "lexer.rl"
	{
		self_closing = 1;
	}
	goto st5;
tr26:
#line 155 "lexer.rl"
	{
		has_value = 1;
	}
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
#line 147 "lexer.rl"
	{
		self_closing = 1;
	}
	goto st5;
tr32:
#line 159 "lexer.rl"
	{
		has_value = 2;
	}
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
#line 147 "lexer.rl"
	{
		self_closing = 1;
	}
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 1025 "lexer.c"
	if ( (*p) == 62 )
		goto st59;
	goto tr1;
tr8:
#line 42 "lexer.rl"
	{ identifier.end = p; }
#line 137 "lexer.rl"
	{
		// Reset self-closing state - we don't know yet.
		self_closing = 0;
		
		rb_funcall(delegate, id_open_tag_begin, 1, Trenni_token(identifier));
	}
	goto st59;
tr17:
#line 42 "lexer.rl"
	{ identifier.end = p; }
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
	goto st59;
tr27:
#line 155 "lexer.rl"
	{
		has_value = 1;
	}
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
	goto st59;
tr33:
#line 159 "lexer.rl"
	{
		has_value = 2;
	}
#line 163 "lexer.rl"
	{
		if (has_value == 1) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), pcdata);
		} else if (has_value == 2) {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), empty_string);
		} else {
			rb_funcall(delegate, id_attribute, 2, Trenni_token(identifier), Qtrue);
		}
	}
	goto st59;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
#line 1090 "lexer.c"
	switch( (*p) ) {
		case 38: goto tr105;
		case 60: goto tr106;
	}
	goto tr104;
tr16:
#line 42 "lexer.rl"
	{ identifier.end = p; }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 1104 "lexer.c"
	if ( (*p) == 34 )
		goto st7;
	goto tr1;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	switch( (*p) ) {
		case 34: goto st11;
		case 38: goto tr21;
		case 60: goto tr1;
	}
	goto tr19;
tr19:
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st8;
tr22:
#line 56 "lexer.rl"
	{
		characters.end = p;
		
		Trenni_Parser_append_token(&pcdata, encoding, characters);
	}
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st8;
tr28:
#line 52 "lexer.rl"
	{
		characters.begin = p;
	}
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 1150 "lexer.c"
	switch( (*p) ) {
		case 34: goto tr23;
		case 38: goto tr24;
		case 60: goto tr1;
	}
	goto tr22;
tr23:
#line 56 "lexer.rl"
	{
		characters.end = p;
		
		Trenni_Parser_append_token(&pcdata, encoding, characters);
	}
#line 48 "lexer.rl"
	{
		// Buffer is ready.
	}
	goto st9;
tr29:
#line 48 "lexer.rl"
	{
		// Buffer is ready.
	}
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 1179 "lexer.c"
	switch( (*p) ) {
		case 32: goto tr25;
		case 47: goto tr26;
		case 62: goto tr27;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr25;
	goto tr1;
tr21:
#line 44 "lexer.rl"
	{
		pcdata = Qnil;
	}
#line 13 "entities.rl"
	{{stack[top++] = 10; goto st40;}}
	goto st10;
tr24:
#line 56 "lexer.rl"
	{
		characters.end = p;
		
		Trenni_Parser_append_token(&pcdata, encoding, characters);
	}
